--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,9 @@
 body {
   background-color: black;
   color: white;
-  margin: 0;
+  margin: 0 auto;
   font-family: "Roboto Condensed", sans-serif;
+  box-sizing: border-box;
 }
 .home-section {
   display: flex;
@@ -11,6 +12,11 @@ body {
   align-items: center;
   margin: 0 auto;
   width: 80%;
+}
+.query-games img {
+  width: 70%;
+  height: auto;
+  margin-left: 50px;
 }
 
 .search-filters-container {
@@ -21,10 +27,49 @@ body {
   margin-bottom: 20px;
 }
 
+.search-filters-container > form > input {
+  width: 650px;
+  height: 30px;
+  display: flex;
+  background-color: #322c2b;
+  border-radius: 20px;
+  color: white;
+  border: none;
+  line-height: 20px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  padding: 10px;
+  font-size: 20px;
+}
+
+.search-filters-container > form > input:hover {
+  cursor: auto;
+  background-color: white;
+  color: #322c2b;
+}
+
+.filters > div > select {
+  appearance: none;
+  -webkit-appearance: none;
+  border: none;
+  border-radius: 30px;
+  padding: 15px 20px;
+  font-size: 18px;
+  background-color: #3b3434;
+  color: white;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+.filters > div > select:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #322c2b;
+}
+
 .filters {
   display: flex;
   gap: 10px;
-  margin-top: 10px;
+  margin-top: 40px;
 }
 
 .results-container {
@@ -33,6 +78,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: #1f2023;
+  padding: 20px;
 }
 
 .games-grid {
@@ -59,11 +105,544 @@ body {
 
 .game-image {
   width: 100%;
+  height: 200px;
+  border-radius: 10px;
+}
+.card-content {
+  padding: 10px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.query-games {
+  font-size: 35px;
+  font-weight: bold;
+  margin-bottom: 50px;
+  padding-top: 20px;
+}
+.pagination {
+  margin-top: 20px;
+}
+
+.pagination > button {
+  appearance: none;
+  -webkit-appearance: none;
+  border: none;
+  border-radius: 30px;
+  padding: 8px 12px;
+  font-size: 16px;
+  background-color: #3b3434;
+  color: white;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+.pagination > button:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #322c2b;
+}
+.header-logo img {
+  height: 80px;
+  width: auto;
+  object-fit: contain;
+}
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 80%;
+  margin: 0 auto;
+  padding: 10px 20px;
+  font-size: 20px;
+}
+
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.header-logo {
+  flex-grow: 1;
+}
+
+.user-info {
+  color: white;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.auth-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.auth-buttons button {
+  display: inline-block;
+  margin-left: 10px;
+  padding: 15px 25px;
+  background-color: #3b3434;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.auth-buttons button:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #322c2b;
+}
+.user-info img {
+  margin-left: 10px;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  object-fit: cover;
+}
+
+.user-info button {
+  margin-left: 10px;
+  padding: 15px 25px;
+  background-color: #3b3434;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.user-info button:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #322c2b;
+}
+
+/* Signup.css */
+.signup-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: black;
+  color: white;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.signup-page h2 {
+  margin-bottom: 20px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.signup-page form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+}
+
+.signup-page form input {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 15px;
+  padding: 15px 25px;
+  background-color: #322c2b;
+  border: none;
+  border-radius: 30px;
+  color: white;
+  font-size: 20px;
+}
+
+.signup-page form input[type="text"]::placeholder,
+.signup-page form input[type="email"]::placeholder,
+.signup-page form input[type="password"]::placeholder {
+  color: #bbbbbb;
+}
+
+.signup-page form button {
+  width: 100%;
+  height: 40px;
+  margin-top: 10px;
+  background-color: #3b3434;
+  border: none;
+  border-radius: 20px;
+  color: white;
+  font-size: 20x;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+.signup-page form input[type="file"] {
+  margin-bottom: 15px;
+  /* Reset styles for file input */
+  background-color: inherit;
+  border: inherit;
+  border-radius: inherit;
+  color: inherit;
+  font-size: inherit;
+  padding: inherit;
+  width: inherit;
+  height: inherit;
+  cursor: pointer; /* Optional: add pointer cursor to indicate clickable element */
+  appearance: none;
+  -webkit-appearance: none;
+}
+.signup-page form button:hover {
+  background-color: white;
+  color: #322c2b;
+}
+.signup-page form button {
+  font-size: 20px;
+  font-weight: bold;
+}
+.text-photo {
+  font-size: 25px;
+  font-weight: bold;
+  margin-top: 15px;
+  margin-bottom: 25px;
+}
+.signup-logo {
+  height: 150px;
+  margin-bottom: 40px;
+  width: auto;
+  object-fit: contain;
+}
+
+/* Login.css */
+
+.login-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+  background-color: black;
+  color: white;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.login-page h2 {
+  margin-bottom: 20px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.login-page form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+}
+
+.login-page form input {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 15px;
+  padding: 15px 25px;
+  background-color: #322c2b;
+  border: none;
+  border-radius: 30px;
+  color: white;
+  font-size: 20px;
+}
+
+.login-page form input[type="email"]::placeholder,
+.login-page form input[type="password"]::placeholder {
+  color: #bbbbbb;
+}
+
+.login-page form button {
+  width: 100%;
+  height: 40px;
+  margin-top: 10px;
+  background-color: #3b3434;
+  border: none;
+  border-radius: 20px;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.login-page form button:hover {
+  background-color: white;
+  color: #322c2b;
+}
+.signup-text {
+  text-decoration: none; /* Enlève le soulignage */
+  color: white; /* Remplacez "your_color_here" par la couleur souhaitée */
+  padding: 10px;
+  margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 18px;
+}
+.game-page {
+  background-color: #1f2023;
+  color: white;
+  font-family: "Roboto Condensed", sans-serif;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.gamepictext {
+  display: flex;
+  width: 100%;
+  gap: 20px;
+}
+
+.game-media {
+  width: 50%;
+}
+
+.game-media img {
+  max-width: 100%;
   height: auto;
   border-radius: 10px;
 }
 
-.card-content {
+.game-description {
+  width: 50%;
+}
+
+.game-description p {
+  margin-bottom: 10px;
+}
+
+.reviews,
+.similar-games {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.review-item {
+  border: 1px solid #3b3434;
+  padding: 15px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+
+.review-item p {
+  margin: 0;
+  margin-bottom: 5px;
+}
+
+.games-grid2 {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 10px;
+
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.game-card {
+  background-color: #202020;
   padding: 10px;
+  border-radius: 10px;
   text-align: center;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.game-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.game-card h4 {
+  margin: 0;
+  font-size: 20px;
+}
+
+.game-card img {
+  width: 100%;
+  height: 200px;
+  border-radius: 8px;
+}
+.game-details {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.details {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.favorites-button {
+  width: 20%;
+  height: 40px;
+  margin-top: 10px;
+  background-color: #3b3434;
+  border: none;
+  border-radius: 20px;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.favorites-button:hover {
+  background-color: white;
+  color: #322c2b;
+}
+.details-description {
+  max-height: 150px; /* Ajustez cette valeur en fonction de la hauteur de vos lignes */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5; /* Nombre maximum de lignes à afficher */
+  -webkit-box-orient: vertical;
+}
+.reviews > img {
+  width: 200px;
+  height: auto;
+  margin-bottom: 20px;
+}
+.review-item {
+  margin-top: 10px;
+}
+
+.similar-games > img {
+  width: 320px;
+  height: auto;
+
+  margin-bottom: 20px;
+  margin-right: 5px;
+}
+.similar-games h4 {
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+.reviews form textarea {
+  width: 100%;
+  height: 80px;
+  border-radius: 5px;
+  background-color: #3b3434;
+  color: white;
+}
+.reviews form button {
+  width: 20%;
+  height: 40px;
+  margin-top: 10px;
+  background-color: #3b3434;
+  border: none;
+  border-radius: 20px;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  margin-bottom: 20px;
+}
+.reviews span {
+  font-weight: bold;
+  margin-top: 10px;
+  font-size: 20px;
+}
+.reviews > div > select {
+  appearance: none;
+  -webkit-appearance: none;
+  border: none;
+  border-radius: 10px;
+  padding: 15px 20px;
+  font-size: 18px;
+  background-color: #3b3434;
+  color: white;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+.reviews > div > select:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #322c2b;
+}
+.favorites-container {
+  padding: 20px;
+}
+
+.favorites-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+  gap: 20px;
+}
+
+.favorite-item {
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.game-image {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.buttons-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.remove-button {
+  width: 40%;
+  height: 40px;
+  margin-top: 10px;
+  background-color: #3b3434;
+  border: none;
+  border-radius: 20px;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  margin-bottom: 20px;
+}
+.remove-button:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #322c2b;
+}
+
+.details-link {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.details-link:hover {
+  text-decoration: underline;
+}
+.favorite-item h2 {
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 30px;
 }
